--- a/style.css
+++ b/style.css
@@ -47,5 +47,11 @@ body{
     background-color: transparent;
 }
 #progress-bar{
-    
+   width: 100%; 
+}
+
+#current-progress{
+    width: 0%;
+    height: 10px;
+    background-color: blue;
 }
